[package]
name = "telegram_auto_poster"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
teloxide = { version = "0.12", features = ["macros"] }
anyhow = "1.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
axum = "0.7"

[[bin]]
name = "telegram_auto_poster"
path = "src/main.rs"
